# digrafo-haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  tarea03.cabal
app/: Main.hs
src/: Digrafo.hs
