cabal-version:      2.4
name:               tarea03
version:            0.1.0.1
synopsis:           A simple Directed Graph module

-- A longer description of the package.
description:        An implementation of a Directed Graph made for a Programming Languages course.
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Gabriel Peraza
maintainer:         
category:           Math
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Digrafo
    build-depends:
        base >= 4.10.1.0,
    hs-source-dirs:   src
    default-language: Haskell2010

executable tarea03
    main-is:          Main.hs
    build-depends:
        base >= 4.10.1.0,
        tarea03,

    hs-source-dirs:   app
    default-language: Haskell2010
